<resources>
    <string name="app_name">TwitterClone</string>
    <string name="enter_the_username">Enter the username to signup...</string>
    <string name="enter_the_password">Enter the password to signup...</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="enter_the_password_to_login">Enter the password to login...</string>
    <string name="enter_the_username_to_login">Enter the username to login...</string>
    <string name="enter_the_email_to_signup">Enter the email to signup...</string>
    <string name="logout">LOGOUT</string>
    <string name="back4app_id">EtgkvjXgQMpCQK2He8o1y5kOoXjLXDWh0s5ELT30</string>
    <string name="back4app_client_key">RMLTYJPzHMHMVP81WSGaQfjTDmAOAhDN89iOPHzR</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="send_tweet">SEND TWEET</string>
    <string name="tweets">TWEETS</string>
    <string name="send_a_tweet">Send a tweet...</string>
</resources>